Fixes spring break background image on small screens

--- a/app/_scss/includes/_header_image.scss
+++ b/app/_scss/includes/_header_image.scss
@@ -2,6 +2,7 @@
 	#image-splash {
 		background-image: url('/images/full-bleed/banner-spring-break-1400.jpg');
 		background-repeat: no-repeat;
+		background-position: 50% 50%;
 	}
 }
 
